<resources>
    <string name="app_name">Taxi Clerk_New</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to Login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password required</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_terms">Accept terms</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to Register activity -->
    <string name="register_title">Register</string>
    <string name="register_title_text">Register</string>
    <string name="register_email_hint">Your email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_retypepass_hint">Retype password</string>
    <string name="btn_register_text">Register</string>
    <string name="terms"><u>terms and conditions</u></string>
    <string name="im_registerd">I am registerd</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Income fragment -->
    <string name="provider_prompt">Select provider</string>

    <!-- Strings related to Expences fragment -->

    <!-- Strings related to Reports fragment -->

    <!-- Strings related to Settings fragment -->

    <!-- Strings related to Day fragment -->

    <!-- Strings related to Month fragment -->

    <!-- Strings related to Year fragment -->

    <!-- Strings related to Add job provider fragment -->
    <string name="invalid_character_msg">Invalid character!</string>
    <string name="not_have_acc">Not have an account, Sign up here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="stations">
        <item>Heuston</item>
        <item>Connoly</item>
        <item>Pearse</item>
    </string-array>
    <string-array name="minutes">
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </string-array>



</resources>
